# WRKSight

./: .gitignore  ARCHITECTURE.md  README.md  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
indicators/: README.md  no_wick_candle_detector.pine
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  generate-placeholder-icons.mjs
src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs
src-tauri/src/capture/: idle.rs  mod.rs  tracker.rs  window.rs
src-tauri/src/db/: migrations.rs  repo.rs
src-tauri/src/privacy/: mod.rs
src/components/: AiProviderSection.tsx  Card.tsx  PausedBanner.tsx  Sidebar.tsx  StatTile.tsx  SummaryPanel.tsx  TopBar.tsx
src/components/charts/: StrategicReactiveBar.tsx  (+2 more)
src/hooks/: useBootstrap.ts
src/lib/: format.ts  tauri.test.ts  tauri.ts  time.ts
src/pages/: Accomplishments.tsx  Diagnostics.tsx  Goals.tsx  Month.tsx  Privacy.tsx  Projects.tsx  Settings.tsx  Today.tsx  Week.tsx
src/services/: classifier.test.ts  classifier.ts  exclusions.test.ts  exclusions.ts  goals.test.ts  goals.ts  insights.ts  normalizationRunner.test.ts  normalizationRunner.ts  normalizer.test.ts  normalizer.ts  summarizer.ts
src/stores/: accomplishmentsStore.ts  activityStore.ts  exclusionsStore.ts  goalsStore.ts  settingsStore.ts
src/test/: setup.ts
src/types/: accomplishment.ts  activity.ts  classification.ts  diagnostics.test.ts  diagnostics.ts  exclusion.ts  goal.ts  index.ts  settings.test.ts  settings.ts  summary.ts
(+13 files in other folders)
