[package]
name = "wrksight"
version = "0.1.0"
description = "Local-first work intelligence tracker"
authors = ["you"]
edition = "2021"
rust-version = "1.75"

[lib]
name = "wrksight_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.1", features = ["tray-icon"] }
tauri-plugin-dialog = "2.0"
tauri-plugin-os = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
thiserror = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
directories = "5"
once_cell = "1"
parking_lot = "0.12"
url = "2"
log = "0.4"
env_logger = "0.11"

# platform-specific active-window detection
active-win-pos-rs = "0.8"
user-idle = "0.5"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
